component based doctors details

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -120,7 +120,7 @@
 
 <div class="vertical-center">
   <div class="center">
-    <ion-img src="../../../../assets/img/{{method1}}.JPG" class="ion-align-self-end"></ion-img>
+    <ion-img src="../../../../assets/img/{{method1}}.jpg" class="ion-align-self-end"></ion-img>
   </div>   
 </div>
 </ion-col>
@@ -193,7 +193,7 @@
 
             <ion-item>
               <ion-label>&#8369; </ion-label>
-              <ion-input></ion-input>
+              <ion-input type="number"></ion-input>
             </ion-item>
 
 
@@ -413,7 +413,7 @@ ______          _    _
           <ion-col size="6" offset="3"  >
           <div class="vertical-center">
             <div class="center">
-              <ion-img src="../../../../assets/img/{{method1}}.JPG" class="ion-align-self-end"></ion-img>
+              <ion-img src="../../../../assets/img/{{method1}}.jpg" class="ion-align-self-end"></ion-img>
               <h3>{{method}}</h3>
             </div>   
           </div>
