--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -1,3 +1,12 @@
+<!--
+___  ___        _      _  _              _   _                   _             
+|  \/  |       | |    (_)| |            | | | |                 | |            
+| .  . |  ___  | |__   _ | |  ___       | |_| |  ___   __ _   __| |  ___  _ __ 
+| |\/| | / _ \ | '_ \ | || | / _ \      |  _  | / _ \ / _` | / _` | / _ \| '__|
+| |  | || (_) || |_) || || ||  __/      | | | ||  __/| (_| || (_| ||  __/| |   
+\_|  |_/ \___/ |_.__/ |_||_| \___|      \_| |_/ \___| \__,_| \__,_| \___||_|   
+                                                                               
+    -->                                                                           
 <ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
   <ion-toolbar color="mango">
     <ion-title>
@@ -12,89 +21,91 @@
       ></ion-button>
     </ion-buttons>
   </ion-toolbar>
-
-
-
-
-
-
 </ion-header>
+
+
+
+
+
+<!--
+______             _     _                        _   _                   _             
+|  _  \           | |   | |                      | | | |                 | |            
+| | | |  ___  ___ | | __| |_   ___   _ __        | |_| |  ___   __ _   __| |  ___  _ __ 
+| | | | / _ \/ __|| |/ /| __| / _ \ | '_ \       |  _  | / _ \ / _` | / _` | / _ \| '__|
+| |/ / |  __/\__ \|   < | |_ | (_) || |_) |      | | | ||  __/| (_| || (_| ||  __/| |   
+|___/   \___||___/|_|\_\ \__| \___/ | .__/       \_| |_/ \___| \__,_| \__,_| \___||_|   
+                                    | |                                                 
+                                    |_|                                                 
+-->
+<app-chh-app-desktop-navigation *ngIf="isDesktop"></app-chh-app-desktop-navigation>
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+  ___  ___        _      _  _             ______             _        
+  |  \/  |       | |    (_)| |            | ___ \           | |       
+  | .  . |  ___  | |__   _ | |  ___       | |_/ /  ___    __| | _   _ 
+  | |\/| | / _ \ | '_ \ | || | / _ \      | ___ \ / _ \  / _` || | | |
+  | |  | || (_) || |_) || || ||  __/      | |_/ /| (_) || (_| || |_| |
+  \_|  |_/ \___/ |_.__/ |_||_| \___|      \____/  \___/  \__,_| \__, |
+                                                                 __/ |
+                                                                |___/ 
+-->
 
 <ion-content *ngIf="!isDesktop">
   <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
     <ion-row >
       <ion-col size="12"  >
   <!-- HEADER MOBILE-->
-<ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
-
-<div *ngFor="let x of data">
-    <ion-list > 
-      <ion-item lines="none">
-        <!--ion-avatar slot="start">
-      <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
-    </ion-avatar-->
-    <!--ion-avatar slot="start">
-      <chh-app-text-avatar [text]="x.last_name" [color]=""></chh-app-text-avatar>
-    </ion-avatar-->
-        <ion-label>
-          <ion-item class="ion-no-padding ">
-            <!--h2 class="ion-text-wrap" style="padding-top: 20px;"-->
-            <h2 class="ion-text-wrap" >
-              <b>{{x.last_name}}, {{x.first_name}} {{x.middle_name}}</b>
-            </h2>
-            <ion-badge
-              color="warning"
-              slot="end"
-              *ngIf="x.admission_status == 'DN' && x.doctor_prof_fee == null && x.is_posted ==null"
-            >
-              PF</ion-badge
-            >
-            <ion-badge
-              color="success"
-              slot="end"
-              *ngIf="x.doctor_prof_fee != null && x.is_posted !=null"
-            >
-              PF OK</ion-badge
-            >
-          </ion-item>
-          <div class="ion-text-wrap" style="padding-top: 5px;">
-            <div *ngIf="x.site == 'C'">
-              <ion-icon name="location-outline" slot="start"></ion-icon>
-              Chong Hua Hospital
-            </div>
-            <div *ngIf="x.site == 'M'">
-              <ion-icon name="location-outline" slot="start"></ion-icon>
-              Chong Hua Hospital Mandaue
-            </div>
-            <div>
-              <ion-icon name="bed-outline" slot="start"></ion-icon>
-              Room {{x.room_no}}
-              <!--ion-icon name="clipboard-outline" slot="start"></ion-icon>
-              as {{x.Doctor_Status}}<br />
-              <ion-chip *ngIf="x.admission_status == 'AC'">
-                <ion-label color="mango"><b>Admitted</b></ion-label>
-              </ion-chip>
-              <ion-chip *ngIf="x.admission_status == 'DN'">
-                <ion-label color="mango"><b>For Discharge</b></ion-label>
-              </ion-chip-->
-            </div>
-          </div>
-        </ion-label>
-      </ion-item>
-      <ion-item lines="none" style="padding-bottom: 10px;">
-        <div class="ion-text-wrap">
-          <!-- <ion-text *ngIf="data.admission_status == 'AC'">Status : Admitted </ion-text>  -->
-
-          <!-- <ion-text *ngIf="data.admission_status == 'DN'">Status : For Discharge<br /></ion-text> -->
-          <ion-icon name="calendar-outline"></ion-icon
-          ><ion-text> Admission Date : {{dateAdmitted}}</ion-text>
-        </div>
-      </ion-item>
-     </ion-list>
-    </div>
-
-
-  </ion-card>
+  <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted">
+  </app-chh-app-patient-header>
 </ion-col>
 </ion-row>
 </ion-grid>
@@ -112,33 +123,18 @@
     <ion-col size="12"  >
       <ion-card class="card-margin ">
 
-    <!--ion-list-header>
-      Have You seen this patient?
-    </ion-list-header>
 
-    <ion-item>
-      <ion-toggle  [(ngModel)]="yesnoToggle"  (ionChange)="viewtoggle()"></ion-toggle> {{yesno}}
-    </ion-item-->
+        <app-chh-app-insurance-coordinator-inquiry
+          (showSeenPatientEventEmitter)="isInsuranceCoordinatorEventEmitter($event)"
+        ></app-chh-app-insurance-coordinator-inquiry>
+        <app-chh-app-is-patient-seen *ngIf="showSeenPatient"
+          (showIsPatientSeenEventEmitter)="isPatientSeenEventEmitter($event)"
+        ></app-chh-app-is-patient-seen>
 
-   
-    <ion-item>
-      <ion-label  class="ion-text-wrap">Are you a Insurance Coordinator?</ion-label> 
-      <!--ion-checkbox color="mango" checked="false" (ionChange)="viewtoggle($event)"></ion-checkbox-->
-      </ion-item>
-      <ion-segment (ionChange)="viewtoggle($event)">
-        <ion-segment-button value="y">
-          <ion-label>Yes</ion-label>
-        </ion-segment-button>
-        <ion-segment-button value="o" style="width: 1px;" hidden ></ion-segment-button>
-        <ion-segment-button value="n">
-          <ion-label>No</ion-label>
-        </ion-segment-button>
-      </ion-segment>
 
-      <div *ngIf="showSeenPatient">
+      <!--div *ngIf="showSeenPatient">
       <ion-item  >
         <ion-label  class="ion-text-wrap">Have you seen this Patient?</ion-label> 
-        <!--ion-checkbox color="mango" checked="false" (ionChange)="viewtoggle($event)"></ion-checkbox-->
         </ion-item>
         <ion-segment (ionChange)="viewtoggle1($event)">
           <ion-segment-button value="y">
@@ -149,7 +145,7 @@
             <ion-label>No</ion-label>
           </ion-segment-button>
         </ion-segment>
-      </div>
+      </div-->
 
   </ion-card>
   </ion-col>
@@ -169,7 +165,7 @@
 
     <ion-item (click)="redirecto('insurance')">
       <ion-avatar slot="start">
-        <img src="../../../../assets/img/insurance.JPG">
+        <img src="../../../../assets/img/insurance.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Care of Insurance</h2>
@@ -179,7 +175,7 @@
 
     <ion-item (click)="redirecto('charity')">
       <ion-avatar slot="start">
-        <img src="../../../../assets/img/charity.JPG">
+        <img src="../../../../assets/img/charity.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Charity</h2>
@@ -189,7 +185,7 @@
 
     <ion-item (click)="redirecto('philhealth')">
       <ion-avatar slot="start">
-        <img src="../../../../assets/img/philhealth.JPG">
+        <img src="../../../../assets/img/philhealth.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Phil Health</h2>
@@ -201,48 +197,6 @@
   </ion-col>
   </ion-row>
 </ion-grid>
-
-
-
-
-<!--
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
-    <ion-row >
-      <ion-col size="12"  >
-        <ion-card class="card-margin ">
-          <ion-item  (click)="redirecto('insurance')">
-            <ion-label>Care of Insurance</ion-label>
-          </ion-item>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding"><ion-row ><ion-col size="12"><div style="padding: 5px;"></div></ion-col></ion-row></ion-grid>
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
-    <ion-row >
-      <ion-col size="12"  >
-        <ion-card class="card-margin ">
-          <ion-item (click)="redirecto('charity')">
-            <ion-label>Charity</ion-label>
-          </ion-item>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding"><ion-row ><ion-col size="12"><div style="padding: 5px;"></div></ion-col></ion-row></ion-grid>
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding background-lightgray">
-    <ion-row >
-      <ion-col size="12"  >
-        <ion-card class="card-margin ">
-          <ion-item (click)="redirecto('philhealth')">
-            <ion-label>Phil Health</ion-label>
-          </ion-item>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
--->
-
 </ion-content>
 <ion-footer class="ion-no-border" *ngIf="!isDesktop">
   <ion-toolbar>
@@ -263,79 +217,60 @@
 
 
 
-<!--
-______          _    _              
-|  _  \        | |  | |             
-| | | |___  ___| | _| |_ ___  _ __  
-| | | / _ \/ __| |/ / __/ _ \| '_ \ 
-| |/ /  __/\__ \   <| || (_) | |_) |
-|___/ \___||___/_|\_\\__\___/| .__/ 
-                             | |    
-                             |_|    
--->
 
-<ion-header *ngIf="isDesktop"  mode="md" class="ion-no-border custom-border-bottom" >
-  <ion-toolbar>
-    <ion-row class="ion-align-items-center"  >
-      <ion-col size="2">
-        <chh-app-logo-sm ></chh-app-logo-sm>
-      </ion-col>
-      <ion-col size="10">
-        <div class="navbar" class="ion-text-center chh-bg">
-          <ion-button
-            id="button-dashboard"
-            fill="clear"
-            routerLink="/menu/dashboard"
-            routerDirection="root"
-            routerLinkActive="active-link"
-            class="link"
-          >
-            {{this.constants.MENU__VALUE__DASHBOARD}}
-          </ion-button>
-          <ion-button
-            id="button-in-patients"
-            fill="clear"
-            routerLink="/menu/in-patients"
-            routerDirection="root"
-            routerLinkActive="active-link"
-            class="link"
-          >
-            {{this.constants.MENU__VALUE__IN_PATIENTS}}
-          </ion-button>
-          <ion-button
-            id="button-appointments"
-            fill="clear"
-            routerLink="/menu/appointments"
-            routerDirection="root"
-            routerLinkActive="active-link"
-            class="link"
-          >
-            {{this.constants.MENU__VALUE__APPOINTMENTS}}
-          </ion-button>
-          <ion-button
-            id="button-settings"
-            fill="clear"
-            routerLink="/menu/settings"
-            routerDirection="root"
-            routerLinkActive="active-link"
-            class="link"
-          >
-          {{this.constants.MENU__VALUE__SETTINGS}}
-          </ion-button>
-          <ion-button
-            id="button-logout"
-            fill="clear"
-            routerDirection="root"
-            routerLinkActive="active-link"
-            class="link"
-          >
-          {{this.constants.MENU__VALUE__LOG_OUT}}
-          </ion-button>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-toolbar>
-  </ion-header> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+______             _     _                       ______             _        
+|  _  \           | |   | |                      | ___ \           | |       
+| | | |  ___  ___ | | __| |_   ___   _ __        | |_/ /  ___    __| | _   _ 
+| | | | / _ \/ __|| |/ /| __| / _ \ | '_ \       | ___ \ / _ \  / _` || | | |
+| |/ / |  __/\__ \|   < | |_ | (_) || |_) |      | |_/ /| (_) || (_| || |_| |
+|___/   \___||___/|_|\_\ \__| \___/ | .__/       \____/  \___/  \__,_| \__, |
+                                    | |                                 __/ |
+                                    |_|                                |___/ 
+-->
 <ion-content  *ngIf="isDesktop">
   <ul class="breadcrumb" >
     <li>
@@ -365,21 +300,32 @@ ______          _    _
         <ion-col size="12"  >
           <ion-card class="card-margin ">
     
-        <!--ion-list-header>
-          Have You seen this patient?
-        </ion-list-header>
-    
-        <ion-item>
-          <ion-toggle  [(ngModel)]="yesnoToggle"  (ionChange)="viewtoggle()"></ion-toggle> {{yesno}}
-        </ion-item-->
-    
+            <app-chh-app-insurance-coordinator-inquiry
+            (showSeenPatientEventEmitter)="isInsuranceCoordinatorEventEmitter($event)"
+          ></app-chh-app-insurance-coordinator-inquiry>
        
-        <ion-item>
+
+
+            <app-chh-app-is-patient-seen *ngIf="showSeenPatient"
+            (showIsPatientSeenEventEmitter)="isPatientSeenEventEmitter($event)"
+            
+            ></app-chh-app-is-patient-seen>
+
+
+
+
+
+
+
+
+
+
+
+        <!--ion-item>
           <ion-label  class="ion-text-wrap">Are you a Insurance Coordinator?</ion-label> 
-         
           </ion-item>
-          <ion-segment >
-            <ion-segment-button value="yes">
+          <ion-segment (ionChange)="viewtoggle($event)">
+            <ion-segment-button value="y">
               <ion-label>Yes</ion-label>
             </ion-segment-button>
             <ion-segment-button value="o" style="width: 1px;" hidden ></ion-segment-button>
@@ -387,6 +333,21 @@ ______          _    _
               <ion-label>No</ion-label>
             </ion-segment-button>
           </ion-segment>
+    
+          <div *ngIf="showSeenPatient">
+          <ion-item  >
+            <ion-label  class="ion-text-wrap">Have you seen this Patient?</ion-label> 
+            </ion-item>
+            <ion-segment (ionChange)="viewtoggle1($event)">
+              <ion-segment-button value="y">
+                <ion-label>Yes</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="o" style="width: 1px;" hidden ></ion-segment-button>
+              <ion-segment-button value="n">
+                <ion-label>No</ion-label>
+              </ion-segment-button>
+            </ion-segment>
+          </div-->
       </ion-card>
       </ion-col>
       </ion-row>
@@ -395,7 +356,7 @@ ______          _    _
     
     <app-chh-app-card-newline></app-chh-app-card-newline>
     
-    <ion-grid    class="ion-no-padding ">
+    <ion-grid    class="ion-no-padding " *ngIf="isDesktop && showSelection">
       <ion-row >
         <ion-col size="12"  >
           <ion-card class="card-margin ">
@@ -406,7 +367,7 @@ ______          _    _
     
         <ion-item (click)="redirecto('insurance')" class="pointer">
           <ion-avatar slot="start">
-            <img src="../../../../assets/img/insurance.JPG">
+            <img src="../../../../assets/img/insurance.jpg">
           </ion-avatar>
           <ion-label>
             <h2>Care of Insurance</h2>
@@ -441,30 +402,6 @@ ______          _    _
     
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        asdasdasdasd
-        
                 </ion-col>
     </ion-row>
   </ion-grid>
