--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -224,8 +224,25 @@
 </ion-content>
 
 <ion-footer class="ion-no-border" *ngIf="!isDesktop">
+
   <ion-toolbar>
+   
     <ion-grid class="ion-no-padding">
+
+
+      <ion-row *ngIf="method == 'Philhealth'">
+        <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+        <ion-col size-xs="12" size-md="4" size-lg="4">
+    
+          <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()">view case rates</ion-button>
+
+          
+        </ion-col>
+        <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+      </ion-row>
+
+
+
       <ion-row>
         <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
         <ion-col size-xs="12" size-md="4" size-lg="4">
