--- a/src/app/chh-web-components/chh-app-list-of-doctors/chh-app-list-of-doctors.component.html
+++ b/src/app/chh-web-components/chh-app-list-of-doctors/chh-app-list-of-doctors.component.html
@@ -6,9 +6,9 @@
       </ion-item>
       <ng-container >
         <ion-item lines="none" *ngFor="let dr of coDoctors">
-          <ion-avatar slot="start">
+          <!-- <ion-avatar slot="start">
             <chh-app-text-avatar [text]="dr.last_name" [color]=""></chh-app-text-avatar>
-          </ion-avatar>
+          </ion-avatar> -->
           <ion-label style="margin-top: -10px;">
             <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
               <h3 class="ion-text-wrap" style="padding-top: 20px;">
