--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -112,15 +112,106 @@ ______             _     _                        _   _                   _
 
     
 
-
-
-
 <app-chh-app-card-newline></app-chh-app-card-newline>
 
 
 <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " aria-disabled="true">
   <ion-row >
     <ion-col size="12"  >
+      <ion-card class="card-margin ">
+      <ion-item>
+        <ion-label>Are you a Insurance Coordinator?</ion-label> 
+        <ion-checkbox color="mango" checked="false"></ion-checkbox>
+        </ion-item>
+      </ion-card>
+  </ion-col>
+  </ion-row>
+</ion-grid>
+<app-chh-app-card-newline></app-chh-app-card-newline>
+<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " aria-disabled="true">
+  <ion-row >
+    <ion-col size="12"  >
+      <ion-card class="card-margin ">
+      <ion-item>
+        <ion-label>Have you seen this Patient?</ion-label> 
+        <ion-checkbox color="mango"  value="isPatientSeen" (click)="toPFM('isPatientSeen',isPatientSeen)"  [(ngModel)]="isPatientSeen"></ion-checkbox>
+        </ion-item>
+      </ion-card>
+  </ion-col>
+  </ion-row>
+</ion-grid>
+<app-chh-app-card-newline></app-chh-app-card-newline>
+
+<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " >
+  <ion-row >
+    <ion-col size="12"  >
+      <ion-card class="card-margin ">
+        <ion-list [class.disabled]="disabledselection">
+          <ion-list-header>Select Pay Venue</ion-list-header>
+            <ion-item>
+              <ion-label>Care of Insurance</ion-label>
+              <ion-checkbox color="mango"  slot="end" value="insurance" [(ngModel)]="insurance" (click)="buttonclick('insurance',insurance)" ></ion-checkbox>
+            </ion-item>
+            <ion-item>
+              <ion-label>Charity</ion-label>
+              <ion-checkbox color="mango"  slot="end" value="charity" [(ngModel)]="charity"  (click)="buttonclick('charity',charity)" ></ion-checkbox>
+            </ion-item>
+            <ion-item>
+              <ion-label>Phil Health</ion-label>
+              <ion-checkbox color="mango"  slot="end" value="philhealth" [(ngModel)]="philhealth"  (click)="buttonclick('philhealth',philhealth)" ></ion-checkbox>
+            </ion-item>           
+          </ion-list>
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <ion-button color="mango" size="default" expand="block" shape="round" [disabled]="toPFMbtn"
+          (click)="toPFM()">
+            Next
+          </ion-button>
+   
+  </ion-card>
+  </ion-col>
+  </ion-row>
+</ion-grid>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+
+
+<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " aria-disabled="true">
+  <ion-row >
+    <ion-col size="12"  >
+
+
+
       <ion-card class="card-margin ">
 
 
@@ -134,28 +225,15 @@ ______             _     _                        _   _                   _
         ></app-chh-app-is-patient-seen>
 
 
-      <!--div *ngIf="showSeenPatient">
-      <ion-item  >
-        <ion-label  class="ion-text-wrap">Have you seen this Patient?</ion-label> 
-        </ion-item>
-        <ion-segment (ionChange)="viewtoggle1($event)">
-          <ion-segment-button value="y">
-            <ion-label>Yes</ion-label>
-          </ion-segment-button>
-          <ion-segment-button value="o" style="width: 1px;" hidden ></ion-segment-button>
-          <ion-segment-button value="n">
-            <ion-label>No</ion-label>
-          </ion-segment-button>
-        </ion-segment>
-      </div-->
+
 
   </ion-card>
   </ion-col>
   </ion-row>
-</ion-grid>
+</ion-grid> -->
 
 <app-chh-app-card-newline></app-chh-app-card-newline>
-
+<!-- 
 <ion-grid  *ngIf="!isDesktop && showSelection"  class="ion-no-padding " >
   <ion-row >
     <ion-col size="12"  >
@@ -199,6 +277,9 @@ ______             _     _                        _   _                   _
   </ion-col>
   </ion-row>
 </ion-grid>
+ -->
+
+
 </ion-content>
 <ion-footer class="ion-no-border" *ngIf="!isDesktop">
   <ion-toolbar>
