--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -118,7 +118,7 @@ ______             _     _                        _   _                   _
 <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " aria-disabled="true">
   <ion-row >
     <ion-col size="12"  >
-      <ion-card class="card-margin ">
+      <ion-card class="card-margin " mode="ios">
       <ion-item>
         <ion-label>Are you a Insurance Coordinator?</ion-label> 
         <ion-checkbox color="mango" checked="false"></ion-checkbox>
@@ -131,10 +131,10 @@ ______             _     _                        _   _                   _
 <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " aria-disabled="true">
   <ion-row >
     <ion-col size="12"  >
-      <ion-card class="card-margin ">
+      <ion-card class="card-margin " mode="ios">
       <ion-item>
         <ion-label>Have you seen this Patient?</ion-label> 
-        <ion-checkbox color="mango"  value="isPatientSeen" (click)="toPFM('isPatientSeen',isPatientSeen)"  [(ngModel)]="isPatientSeen"></ion-checkbox>
+        <ion-checkbox color="mango"  value="isPatientSeen" (click)="isPatientSeenf('isPatientSeen',isPatientSeen)"  [(ngModel)]="isPatientSeen"></ion-checkbox>
         </ion-item>
       </ion-card>
   </ion-col>
@@ -145,7 +145,7 @@ ______             _     _                        _   _                   _
 <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding " >
   <ion-row >
     <ion-col size="12"  >
-      <ion-card class="card-margin ">
+      <ion-card class="card-margin " mode="ios">
         <ion-list [class.disabled]="disabledselection">
           <ion-list-header>Select Pay Venue</ion-list-header>
             <ion-item>
@@ -162,24 +162,13 @@ ______             _     _                        _   _                   _
             </ion-item>           
           </ion-list>
 
-
-
-
-
-
-
-
-
-
-
-
-
-          <ion-button color="mango" size="default" expand="block" shape="round" [disabled]="toPFMbtn"
-         >
-            Next
-          </ion-button>
-   
   </ion-card>
+
+  <ion-button color="mango" size="default" expand="block" shape="round" [disabled]="toPFMbtn" (click)="redirecto()"
+  >
+     Next
+   </ion-button>
+
   </ion-col>
   </ion-row>
 </ion-grid>
@@ -381,57 +370,76 @@ ______             _     _                       ______             _
     <ion-grid class="ion-no-padding " aria-disabled="true">
       <ion-row >
         <ion-col size="12"  >
-          <ion-card class="card-margin ">
-    
-            <app-chh-app-insurance-coordinator-inquiry
-            (showSeenPatientEventEmitter)="isInsuranceCoordinatorEventEmitter($event)"
-          ></app-chh-app-insurance-coordinator-inquiry>
-       
-
-
-            <app-chh-app-is-patient-seen *ngIf="showSeenPatient"
-            (showIsPatientSeenEventEmitter)="isPatientSeenEventEmitter($event)"
-            
-            ></app-chh-app-is-patient-seen>
+          
 
 
 
 
 
 
+          <ion-grid   class="ion-no-padding " aria-disabled="true">
+            <ion-row >
+              <ion-col size="12"  >
+                <ion-card class="card-margin " mode="ios">
+                <ion-item>
+                  <ion-label>Are you a Insurance Coordinator?</ion-label> 
+                  <ion-checkbox color="mango" checked="false"></ion-checkbox>
+                  </ion-item>
+                </ion-card>
+            </ion-col>
+            </ion-row>
+          </ion-grid>
+          <app-chh-app-card-newline></app-chh-app-card-newline>
+          <ion-grid  class="ion-no-padding " aria-disabled="true">
+            <ion-row >
+              <ion-col size="12"  >
+                <ion-card class="card-margin " mode="ios">
+                <ion-item>
+                  <ion-label>Have you seen this Patient?</ion-label> 
+                  <ion-checkbox color="mango"  value="isPatientSeen" (click)="isPatientSeenf('isPatientSeen',isPatientSeen)"  [(ngModel)]="isPatientSeen"></ion-checkbox>
+                  </ion-item>
+                </ion-card>
+            </ion-col>
+            </ion-row>
+          </ion-grid>
+          <app-chh-app-card-newline></app-chh-app-card-newline>
+          
+          <ion-grid   class="ion-no-padding " >
+            <ion-row >
+              <ion-col size="12"  >
+                <ion-card class="card-margin " mode="ios">
+                  <ion-list [class.disabled]="disabledselection">
+                    <ion-list-header>Select Pay Venue</ion-list-header>
+                      <ion-item>
+                        <ion-label>Care of Insurance</ion-label>
+                        <ion-checkbox color="mango"  slot="end" value="insurance" [(ngModel)]="insurance" (click)="buttonclick('insurance',insurance)" ></ion-checkbox>
+                      </ion-item>
+                      <ion-item>
+                        <ion-label>Charity</ion-label>
+                        <ion-checkbox color="mango"  slot="end" value="charity" [(ngModel)]="charity"  (click)="buttonclick('charity',charity)" ></ion-checkbox>
+                      </ion-item>
+                      <ion-item>
+                        <ion-label>Phil Health</ion-label>
+                        <ion-checkbox color="mango"  slot="end" value="philhealth" [(ngModel)]="philhealth"  (click)="buttonclick('philhealth',philhealth)" ></ion-checkbox>
+                      </ion-item>           
+                    </ion-list>
+          
+            </ion-card>
+          
+            <ion-button color="mango" size="default" expand="block" shape="round" (click)="redirecto()" [disabled]="toPFMbtn"
+            >
+               Next
+             </ion-button>
+          
+            </ion-col>
+            </ion-row>
+          </ion-grid>
+          
+          
 
 
 
 
-
-        <!--ion-item>
-          <ion-label  class="ion-text-wrap">Are you a Insurance Coordinator?</ion-label> 
-          </ion-item>
-          <ion-segment (ionChange)="viewtoggle($event)">
-            <ion-segment-button value="y">
-              <ion-label>Yes</ion-label>
-            </ion-segment-button>
-            <ion-segment-button value="o" style="width: 1px;" hidden ></ion-segment-button>
-            <ion-segment-button value="n">
-              <ion-label>No</ion-label>
-            </ion-segment-button>
-          </ion-segment>
-    
-          <div *ngIf="showSeenPatient">
-          <ion-item  >
-            <ion-label  class="ion-text-wrap">Have you seen this Patient?</ion-label> 
-            </ion-item>
-            <ion-segment (ionChange)="viewtoggle1($event)">
-              <ion-segment-button value="y">
-                <ion-label>Yes</ion-label>
-              </ion-segment-button>
-              <ion-segment-button value="o" style="width: 1px;" hidden ></ion-segment-button>
-              <ion-segment-button value="n">
-                <ion-label>No</ion-label>
-              </ion-segment-button>
-            </ion-segment>
-          </div-->
-      </ion-card>
       </ion-col>
       </ion-row>
     </ion-grid>
