fixed commonmodule error

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -367,11 +367,6 @@ ______             _     _                       ______             _
     <ion-col  size-md="4">
     
 
-    <ion-grid class="ion-no-padding " aria-disabled="true">
-      <ion-row >
-        <ion-col size="12"  >
-          
-
 
 
 
@@ -440,12 +435,8 @@ ______             _     _                       ______             _
 
 
 
-      </ion-col>
-      </ion-row>
-    </ion-grid>
     
-    
-    <app-chh-app-card-newline></app-chh-app-card-newline>
+    <!-- <app-chh-app-card-newline></app-chh-app-card-newline>
     
     <ion-grid    class="ion-no-padding " *ngIf="isDesktop && showSelection">
       <ion-row >
@@ -490,7 +481,7 @@ ______             _     _                       ______             _
       </ion-col>
       </ion-row>
     </ion-grid>
-    
+     -->
 
 
                 </ion-col>
