updated code foe prof fee

--- a/src/app/chh-web-components/chh-app-admitting-diagnosis/chh-app-admitting-diagnosis.component.html
+++ b/src/app/chh-web-components/chh-app-admitting-diagnosis/chh-app-admitting-diagnosis.component.html
@@ -1,7 +1,5 @@
-<ion-grid   class="ion-no-padding ">
-  <ion-row >
-  <ion-col size="12"  >
-  <ion-card mode="ios"  class="card-margin">
+
+  <ion-card mode="ios"  >
   <ion-list>
   <ion-item style="padding-top: 10px;">
   <div class="ion-text-wrap"><b>Admitting Diagnosis</b><br /></div>
@@ -23,6 +21,3 @@
   </ion-item>
   </ion-list>
   </ion-card>
-  </ion-col>
-  </ion-row>
-</ion-grid>
