--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -1,5 +1,5 @@
 
-      <ion-card mode="ios" class="card-margin "  *ngIf="isDesktop" >
+      <ion-card mode="ios"   *ngIf="isDesktop" >
 
       <div *ngFor="let x of data">
       <ion-list > 
@@ -64,7 +64,7 @@
 
 
 
-      <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
+      <ion-card mode="ios" *ngIf="!isDesktop" >
 
         <div *ngFor="let x of data">
 
