--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.scss
@@ -26,3 +26,13 @@
     justify-content: center;
     height: 100%;
   }
+
+  .card-nb{
+    box-shadow: none !important;
+  }
+
+
+  .ripple-parent {
+    position: relative;
+    overflow: hidden;
+  }
