--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -7,7 +7,7 @@
       slot="end"
       class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
     >
-      <ion-button routerLink="{{routerLinkBack2}}" routerDirection="backwards" color="chh-css-primary2"
+      <ion-button routerLink="{{routerLinkBack}}" routerDirection="backwards" color="chh-css-primary2"
         >Close&nbsp; <ion-icon name="close-outline"></ion-icon
       ></ion-button>
     </ion-buttons>
@@ -18,19 +18,6 @@
   <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted">
   </app-chh-app-patient-header>
 
-<app-chh-app-card-newline></app-chh-app-card-newline>
-
-<!--
- _____                                                    
-|_   _|                                                   
-  | |   _ __   ___  _   _  _ __   __ _  _ __    ___   ___ 
-  | |  | '_ \ / __|| | | || '__| / _` || '_ \  / __| / _ \
- _| |_ | | | |\__ \| |_| || |   | (_| || | | || (__ |  __/
- \___/ |_| |_||___/ \__,_||_|    \__,_||_| |_| \___| \___|
-                                                          
-                                                          
--->                                             
-                           
 
 
 
@@ -38,96 +25,85 @@
 
 
 
-
-
-<ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
-<ion-row >
-
-<ion-col size="6" offset="3"  >
-
-<div class="vertical-center">
-  <div class="center">
-    <ion-img src="../../../../assets/img/{{method1}}.jpg" class="ion-align-self-end"></ion-img>
-  </div>   
-</div>
-</ion-col>
-
-</ion-row>
-
-
-</ion-grid>
-
-
-
-
-
-
-
-  <app-chh-app-card-newline></app-chh-app-card-newline>
   <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
-    <ion-row >
-      <ion-col size="12"  >
-        <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
-          <ion-item>
-            <ion-label>Are you a Insurance Coordinator?</ion-label> 
-            <ion-checkbox color="mango" checked="false"></ion-checkbox>
-            </ion-item>
-        </ion-card>
+    <ion-row *ngIf="method == 'Philhealth'">
+      <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+      <ion-col size-xs="12" size-md="4" size-lg="4">
+        <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()" *ngIf="method=='Philhealth'">View Case Rates</ion-button>       
       </ion-col>
+      <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
     </ion-row>
+  <ion-row >
+
+  <ion-col size="6" offset="3"  >
+
+  <div class="vertical-center">
+    <div class="center">
+      <ion-img src="../../../../assets/img/{{method1}}.jpg" class="ion-align-self-end"></ion-img>
+    </div>   
+  </div>
+  </ion-col>
+  </ion-row>
   </ion-grid>
-  <app-chh-app-card-newline></app-chh-app-card-newline>
-  <ion-grid  *ngIf="!isDesktop"  class="ion-no-padding ">
-    <ion-row >
-      <ion-col size="12"  >
-        <ion-card mode="ios" *ngIf="!isDesktop" class="card-margin " >
-            <ion-item>
-              <ion-label>&#8369; </ion-label>
-              <ion-input type="number"></ion-input>
-            </ion-item>
-            <ion-button color="mango" size="default" expand="block" shape="round">
-              Save
-            </ion-button>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div *ngIf="(method=='Insurance')">
+      <ion-card mode="ios" *ngIf="!isDesktop " >
+        <ion-item>
+          <ion-label>&#8369; </ion-label>
+          <ion-input type="number" placeholder="0" [(ngModel)]="InsurancePF" (ionChange)="isurancePF()"></ion-input>
+        </ion-item>
+      </ion-card>
+      <ion-card mode="ios" *ngIf="!isDesktop && InsuranceShowVat" >
+        <ion-item>
+          <ion-label>Add VAT?</ion-label> 
+          <ion-checkbox color="mango" checked="false" [(ngModel)]="InsuranceVat"></ion-checkbox>
+        </ion-item>
+      </ion-card>
+    </div>
+        
+    
+    <div *ngIf="(method=='Philhealth')">
+      <ion-card mode="ios" *ngIf="!isDesktop" >
+        <ion-item>
+          <ion-label>PhilHealth Only?</ion-label> 
+          <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()"></ion-checkbox>
+        </ion-item>
+      </ion-card>
+      <ion-card mode="ios" *ngIf="!isDesktop  && PhilhealthShowValue" >
+        <ion-item>
+          <ion-label>&#8369; </ion-label>
+          <ion-input type="number" placeholder="0" [(ngModel)]="PhilhealthPF" ></ion-input>
+        </ion-item>
+      </ion-card>
+    </div>
 
 </ion-content>
 
-  <ion-footer class="ion-no-border" *ngIf="!isDesktop">
+  <ion-footer  *ngIf="!isDesktop">
     <ion-toolbar>
       <ion-grid class="ion-no-padding">
-        <ion-row *ngIf="method == 'Philhealth'">
-          <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
-          <ion-col size-xs="12" size-md="4" size-lg="4">
-            <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()">view case rates</ion-button>       
-          </ion-col>
-          <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
-        </ion-row>
         <ion-row>
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4">
             Status
-            <ion-progress-bar value="0.75"></ion-progress-bar>
+            <ion-progress-bar value="{{progressStatus}}"></ion-progress-bar>
+          </ion-col>
+          <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+        </ion-row>
+        <ion-row >
+          <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+          <ion-col size-xs="12" size-md="4" size-lg="4">
+            <ion-button color="mango" size="default" expand="block" shape="round" (click)="finishTransaction()" *ngIf="summary != 'summary'">
+              Save
+            </ion-button>
+
+
+            <ion-button color="mango" size="default" expand="block" shape="round"  *ngIf="summary == 'summary'">
+              Confirm
+            </ion-button>
+
+
+
+
           </ion-col>
           <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
         </ion-row>
@@ -278,59 +254,42 @@ ______          _    _
 
 
 
-              <ion-card mode="ios"  class="card-margin " >
-                <ion-item>
-                  <ion-label>Are you a Insurance Coordinator?</ion-label> 
-                  <ion-checkbox color="mango" checked="false"></ion-checkbox>
-                  </ion-item>
-              </ion-card>
-
-
-
-
-
-
-
-
-
-              <!-- <ion-card class="card-margin ">
-        
- 
-           
-            <ion-item>
-              <ion-label  class="ion-text-wrap">Have you seen this patient?</ion-label> 
-
-              </ion-item>
-              <ion-segment (ionChange)="segmentChanged($event)" [(ngModel)]="isPatientSeen">
-                <ion-segment-button value="yes">
-                  <ion-label>Yes</ion-label>
-                </ion-segment-button>
-                <ion-segment-button value="o" style="width: 10px;" hidden ></ion-segment-button>
-                <ion-segment-button value="n">
-                  <ion-label>No</ion-label>
-                </ion-segment-button>
-              </ion-segment>
-          </ion-card> -->
-
-
-          <app-chh-app-card-newline></app-chh-app-card-newline>
-
-
-          <ion-card mode="ios"  class="card-margin " >
-
-              <ion-item>
-                <ion-label>&#8369; </ion-label>
-                <ion-input type="number"></ion-input>
-              </ion-item>
+            
   
-              <ion-button color="mango" size="default" expand="block" shape="round">
-                Save
-              </ion-button>
+  <div *ngIf="(method=='Insurance')">
+    <ion-card mode="ios" >
+      <ion-item>
+        <ion-label>&#8369; </ion-label>
+        <ion-input type="number" placeholder="0" [(ngModel)]="InsurancePF" (ionChange)="isurancePF()"></ion-input>
+      </ion-item>
+    </ion-card>
+    <ion-card mode="ios" *ngIf=" InsuranceShowVat" >
+      <ion-item>
+        <ion-label>Add VAT?</ion-label> 
+        <ion-checkbox color="mango" checked="false" [(ngModel)]="InsuranceVat"></ion-checkbox>
+      </ion-item>
+    </ion-card>
+  </div>
+      
   
-          </ion-card>
+  <div *ngIf="(method=='Philhealth')">
+
+    <ion-card mode="ios" *ngIf="!isDesktop" >
+      <ion-item>
+        <ion-label>PhilHealth Only?</ion-label> 
+        <ion-checkbox color="mango" checked="false" [(ngModel)]="IsPhilhealthOnly" (ionChange)="isPhilhealthOnly()"></ion-checkbox>
+      </ion-item>
+    </ion-card>
+
+    <ion-card mode="ios" *ngIf=" PhilhealthShowValue" >
+      <ion-item>
+        <ion-label>&#8369; </ion-label>
+        <ion-input type="number" placeholder="0" [(ngModel)]="PhilhealthPF" ></ion-input>
+      </ion-item>
+    </ion-card>
 
 
-
+  </div>
 
 
 
@@ -376,7 +335,8 @@ ______          _    _
               <h3>{{method}}</h3>
             </div>   
           </div>
-          <ion-button expand="block" fill="outline" (click)="presentCaseRatesModal()" >view case rates</ion-button>
+          <ion-button expand="block" fill="outline" *ngIf="method=='Philhealth'" (click)="presentCaseRatesModal()" 
+         >view case rates</ion-button>
           </ion-col>
           </ion-row>
           </ion-grid>
